--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 July 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ankushrathour.github.io/Ankush-Rathour/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8219805328</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Solan, Himachal Pradesh</span>
                   </li>
