--- a/index.html
+++ b/index.html
@@ -7,29 +7,28 @@
 
   <title>Ankush Rathour - Software Engineer Portfolio</title>
   <meta
-    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, India, specializing in Python, Django, React, and cloud integrations (AWS, GCP, Azure). He builds APIs, microservices, and automation tools."
+    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products."
     name="description">
   <meta
-    content="Ankush Rathour, Software Engineer, Full-Stack Developer, Python, Django, React, FastAPI, AWS, GCP, Azure, Web Scraping, CI/CD, Microservices, Solan, Himachal Pradesh, Portfolio"
+    content="Ankush Rathour, Ankush, ankushrathour, AnkushRathour, Rathour, Ankush Rathour Solan, Software Engineer, Full-Stack Developer, Python, Django, React, FastAPI, AWS, GCP, Azure, Web Scraping, CI/CD, Microservices, Solan, Himachal Pradesh, Portfolio"
     name="keywords">
 
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ankushrathour.in/">
+  <meta property="og:url" content="https://ankushrathour.com/">
   <meta property="og:title" content="Ankush Rathour - Software Engineer Portfolio">
   <meta property="og:description"
-    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cloud integrations (AWS, GCP, Azure). He builds APIs, microservices, and automation tools.">
-  <meta property="og:image" content="https://ankushrathour.in/assets/img/profile-img.jpeg">
+    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
+  <meta property="og:image" content="https://ankushrathour.com/assets/img/profile-img.jpeg">
 
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://ankushrathour.in/">
+  <meta property="twitter:url" content="https://ankushrathour.com/">
   <meta property="twitter:title" content="Ankush Rathour - Software Engineer Portfolio">
   <meta property="twitter:description"
-    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cloud integrations (AWS, GCP, Azure). He builds APIs, microservices, and automation tools.">
-  <meta property="twitter:image" content="https://ankushrathour.in/assets/img/profile-img.jpeg">
+    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
+  <meta property="twitter:image" content="https://ankushrathour.com/assets/img/profile-img.jpeg">
 
   <!-- Favicons -->
   <link href="assets/img/profile-img.jpeg" class=" img-fluid rounded-circle" rel="icon">
-  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link
@@ -46,6 +45,35 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Ankush Rathour",
+    "url": "https://ankushrathour.com/",
+    "image": "https://ankushrathour.com/assets/img/profile-img.jpeg",
+    "jobTitle": "Software Engineer",
+    "worksFor": { "@type": "Organization", "name": "Techwin Labs LLP" },
+    "sameAs": [
+      "https://www.instagram.com/_ankush_rathour_",
+      "https://x.com/Ankush_Rathour_",
+      "https://www.facebook.com/profile.php?id=100065413872423",
+      "https://www.youtube.com/@ankush_rathour",
+      "https://www.pinterest.com/Ankush_Rathour",
+      "https://www.linkedin.com/in/ankush-rathour/",
+      "https://github.com/AnkushRathour",
+      "https://stackoverflow.com/users/18736053/ankush-rathour"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Solan",
+      "addressRegion": "Himachal Pradesh",
+      "addressCountry": "IN"
+    }
+  }
+  </script>
 
 </head>
 
@@ -516,7 +544,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
@@ -635,7 +664,8 @@
                 <h3>Jena Karlis</h3>
                 <h4>Store Owner</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+            <!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -649,7 +679,8 @@
                 <h3>Matt Brandon</h3>
                 <h4>Freelancer</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+            <!-- End testimonial item -->
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -663,14 +694,16 @@
                 <h3>John Larson</h3>
                 <h4>Entrepreneur</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>
+            <!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
       </div>
-    </section><!-- End Testimonials Section -->
+    </section>
+    <!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -780,5 +813,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
