--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ankush Rathour - Software Engineer Portfolio</title>
+  <title>Ankush Rathour</title>
+  <meta name="site_name" content="Ankush Rathour">
   <meta
-    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products."
+    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, India, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products."
     name="description">
   <meta
-    content="Ankush Rathour, Ankush, ankushrathour, AnkushRathour, Rathour, Ankush Rathour Solan, Software Engineer, Full-Stack Developer, Python, Django, React, FastAPI, AWS, GCP, Azure, Web Scraping, CI/CD, Microservices, Solan, Himachal Pradesh, Portfolio"
+    content="Ankush Rathour, Ankush, ankushrathour, AnkushRathour, Rathour, Ankush Rathore, Rathore, ankushrathore, Ankush Rathod,  Ankush Rathour Solan, Software Engineer, Full-Stack Developer, Solan, Himachal Pradesh, Portfolio"
     name="keywords">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ankushrathour.com/">
-  <meta property="og:title" content="Ankush Rathour - Software Engineer Portfolio">
+  <meta property="og:title" content="Ankush Rathour">
   <meta property="og:description"
     content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
-  <meta property="og:image" content="https://ankushrathour.com/assets/img/profile-img.jpeg">
+  <meta property="og:image" content="https://ankushrathour.com/assets/img/AnkushRathour.jpeg">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://ankushrathour.com/">
-  <meta property="twitter:title" content="Ankush Rathour - Software Engineer Portfolio">
+  <meta property="twitter:title" content="Ankush Rathour">
   <meta property="twitter:description"
-    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
-  <meta property="twitter:image" content="https://ankushrathour.com/assets/img/profile-img.jpeg">
+    content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, India, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
+  <meta property="twitter:image" content="https://ankushrathour.com/assets/img/AnkushRathour.jpeg">
 
   <!-- Favicons -->
-  <link href="assets/img/profile-img.jpeg" class=" img-fluid rounded-circle" rel="icon">
+  <link rel="icon" type="image/png" href="https://ankushrathour.com/assets/img/AnkushRathour.jpeg" alt="Ankush Rathour" title="Ankush Rathour">
 
   <!-- Google Fonts -->
   <link
@@ -46,9 +47,37 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- Structured Data -->
+  <!-- WebSite Structured Data -->
   <script type="application/ld+json">
   {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Ankush Rathour",
+    "url": "https://ankushrathour.com",
+    "sameAs": [
+      "https://www.instagram.com/_ankush_rathour_",
+      "https://x.com/Ankush_Rathour_",
+      "https://www.facebook.com/profile.php?id=100065413872423",
+      "https://www.youtube.com/@ankush_rathour",
+      "https://www.pinterest.com/Ankush_Rathour",
+      "https://www.linkedin.com/in/ankush-rathour/",
+      "https://github.com/AnkushRathour",
+      "https://stackoverflow.com/users/18736053/ankush-rathour",
+      "https://medium.com/@ankush.rathour",
+      "https://pypi.org/user/ANKUSHRATHOUR/",
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Solan",
+      "addressRegion": "Himachal Pradesh",
+      "addressCountry": "IN"
+    }
+  }
+  </script>
+
+  <!-- Person Structured Data -->
+  <script type="application/ld+json">
+  {    
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Ankush Rathour",
@@ -64,7 +93,9 @@
       "https://www.pinterest.com/Ankush_Rathour",
       "https://www.linkedin.com/in/ankush-rathour/",
       "https://github.com/AnkushRathour",
-      "https://stackoverflow.com/users/18736053/ankush-rathour"
+      "https://stackoverflow.com/users/18736053/ankush-rathour",
+      "https://medium.com/@ankush.rathour",
+      "https://pypi.org/user/ANKUSHRATHOUR/",
     ],
     "address": {
       "@type": "PostalAddress",
@@ -816,3 +847,4 @@
 
 
 </html>
+
