--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="https://ankushrathour.com/assets/img/AnkushRathour.jpeg" alt="Ankush Rathour" title="Ankush Rathour" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Ankush Rathour</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Ankush_Rathour_" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -847,4 +847,5 @@
 
 
 </html>
+
 
