--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     content="Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, India, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.">
   <meta property="twitter:image" content="https://ankushrathour.com/assets/img/AnkushRathour.jpeg">
 
+  <!-- Google Search Console  -->
+  <meta name="google-site-verification" content="6p2_WAOIq9z7_jaU8F2E_tV5JCUwLn0DTvEF8B9oNfE" />
+  
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="https://ankushrathour.com/assets/img/AnkushRathour.jpeg" alt="Ankush Rathour" title="Ankush Rathour">
 
@@ -848,6 +851,7 @@
 
 
 </html>
+
 
 
 
