--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Google Search Console  -->
   <meta name="google-site-verification" content="6p2_WAOIq9z7_jaU8F2E_tV5JCUwLn0DTvEF8B9oNfE" />
+  <meta name="google-site-verification" content="-FHBQp4E6qHy-OlqBnZSHO2N_ojCMFCEgSB3n0xKg0M" />
   
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="https://ankushrathour.com/assets/img/AnkushRathour.jpeg" alt="Ankush Rathour" title="Ankush Rathour">
@@ -851,6 +852,7 @@
 
 
 </html>
+
 
 
 
