Update index.html Schema

--- a/index.html
+++ b/index.html
@@ -69,14 +69,10 @@
       "https://github.com/AnkushRathour",
       "https://stackoverflow.com/users/18736053/ankush-rathour",
       "https://medium.com/@ankush.rathour",
-      "https://pypi.org/user/ANKUSHRATHOUR/",
+      "https://pypi.org/user/ANKUSHRATHOUR/"
     ],
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Solan",
-      "addressRegion": "Himachal Pradesh",
-      "addressCountry": "IN"
-    }
+    "description": "Ankush Rathour is a Software Engineer from Solan, Himachal Pradesh, specializing in Python, Django, React, and cutting-edge cloud technologies including AWS, Google Cloud Platform (GCP), and Microsoft Azure. He builds scalable RESTful APIs, microservices, and serverless applications, leveraging DevOps practices, CI/CD pipelines, and container orchestration with Docker and Kubernetes. Passionate about AI and Machine Learning, he integrates intelligent data-driven solutions and automation to deliver innovative software products.",
+    "mainEntityOfPage": "https://ankushrathour.com/"
   }
   </script>
 
@@ -100,14 +96,54 @@
       "https://github.com/AnkushRathour",
       "https://stackoverflow.com/users/18736053/ankush-rathour",
       "https://medium.com/@ankush.rathour",
-      "https://pypi.org/user/ANKUSHRATHOUR/",
+      "https://pypi.org/user/ANKUSHRATHOUR/"
     ],
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Solan",
       "addressRegion": "Himachal Pradesh",
       "addressCountry": "IN"
-    }
+    },
+    "knowsAbout": [
+      "Software Engineering",
+      "Web Development",
+      "Frontend Development",
+      "Backend Development",
+      "Full Stack Development",
+      "Python",
+      "JavaScript",
+      "TypeScript",
+      "HTML",
+      "CSS",
+      "React",
+      "Next.js",
+      "Node.js",
+      "MongoDB",
+      "SQL",
+      "PostgreSQL",
+      "Django",
+      "FastAPI",
+      "REST APIs",
+      "GraphQL",
+      "Machine Learning",
+      "Artificial Intelligence",
+      "Deep Learning",
+      "Computer Vision",
+      "Natural Language Processing",
+      "AI Agents",
+      "LLMs",
+      "Git",
+      "GitHub",
+      "Docker",
+      "CI/CD",
+      "Cloud Computing",
+      "AWS",
+      "Google Cloud",
+      "Software Architecture",
+      "Agile Development",
+      "DevOps"
+    ],
+    "mainEntityOfPage": "https://ankushrathour.com/"
   }
   </script>
 
